fix: remove overflow scroll that was affecting ui

--- a/src/styles/pages/game.module.scss
+++ b/src/styles/pages/game.module.scss
@@ -1,8 +1,7 @@
-@import '../global/variables.scss';
+@import "../global/variables.scss";
 
 .game_page {
   padding: 0 5vw;
-  overflow: scroll;
   position: relative;
 
   @media only screen and (min-width: 768px) {
